# Felix---Backtesting-Engine

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
config/: default.yaml  strategy_example.yaml
engine/include/felix/: event_loop.hpp  matching.hpp  order_book.hpp  portfolio.hpp  risk.hpp
engine/src/bindings/: pybind_module.cpp
engine/src/core/: portfolio.cpp
engine/src/matching/: matching.cpp  order_book.cpp
engine/src/risk/: risk_engine.cpp
python/felix/analytics/: metrics.py
python/felix/strategy/: base.py
scripts/: deploy.ps1  preprocess_data.py  run_backtest.py
tests/cpp/: test_datastream.cpp  test_matching.cpp
